# Multimodal-Vein-Fusion

./: .gitignore  README.md  sitecustomize.py
multimodal_vein_fusion/: README.md  pyproject.toml
multimodal_vein_fusion/multimodal_vein_fusion/: __init__.py
multimodal_vein_fusion/src/multimodal_vein_fusion/: gui.py
multimodal_vein_fusion/src/multimodal_vein_fusion/app/: camera_sources.py
multimodal_vein_fusion/src/multimodal_vein_fusion/io/: __init__.py  loaders.py
multimodal_vein_fusion/src/multimodal_vein_fusion/processing/: __init__.py  fusion.py  nir_vesselness.py  registration.py  segmentation.py  thermal_features.py
multimodal_vein_fusion/src/multimodal_vein_fusion/viz/: overlay.py
multimodal_vein_fusion/tests/: conftest.py  test_fusion.py  test_registration.py
src/multimodal_vein_fusion/app/: gui_app.py  state.py
src/multimodal_vein_fusion/cli/: run.py
src/multimodal_vein_fusion/io/: schema.py  writers.py
src/multimodal_vein_fusion/processing/: metrics.py  rgb_features.py
src/multimodal_vein_fusion/viz/: __init__.py
tests/: test_metrics.py  test_segmentation.py
